Mobile View Overflow CSS Fix
Just adds Overflow Vertical to be scroll to fix Mobile / Tablet view

--- a/get5/static/css/get5.css
+++ b/get5/static/css/get5.css
@@ -24,4 +24,7 @@ ul.nav.navbar-nav {
 		float:none;
 		text-align:center;
 	}
+	.container {
+		overflow-x: scroll;
+	}	
 }
